--- a/styles/style.css
+++ b/styles/style.css
@@ -56,27 +56,24 @@ section .home {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10%;
     height: calc(100vh - 80px);
 }
 
-section .home .info {
-    margin: 0 5%;
-}
-
 section .home .info h1 {
-    font-size: 20px;
+    font-size: 30px;
     color: #333333;
     font-weight: 500;
 }
 
 section .home .info h2 {
-    font-size: 40px;
+    font-size: 50px;
     margin-top: 0.2%;
     color: #333333;
 }
 
 section .home .info p {
-    font-size: 15px;
+    font-size: 20px;
     color: #333333;
     font-weight: 400;
     margin-top: 0.2%;
@@ -92,8 +89,9 @@ section .home .info button {
     font-size: 15px;
     font-weight: 500;
     cursor: pointer;
-    border: #f3f3f3 2px solid;
+    border: #333333 2px solid;
     transition: all 0.3s ease;
+    font-weight: lighter;
 }
 
 section .home .info button:hover {
@@ -104,24 +102,18 @@ section .home .info button:hover {
 }
 
 section .home .image {
-    position: relative;
-}
-
-section .home .image img {
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
-    width: 250px;
-    height: 250px;
-    z-index: 1;
-    position: relative;
+    background-image: url('/img/avelar.jpg');
+    background-size: cover;
+    background-position: center;
+    transition: all 0.3s ease;
+    filter: drop-shadow(0px 0px 5px #333333);
 }
 
-section .home .image .border {
-    position: absolute;
-    bottom: 15%;
-    left: 10%;
-    width: 260px;
-    height: 250px;
-    border-radius: 15%;
-    border: 2px solid #33333379;
-    z-index: 0;
+section .home .image:hover {
+    transform: scale(1.1);
+    filter: drop-shadow(0px 0px 5px #333333);
+    background-image: url('/img/avelarr.jpg');
 }
