--- a/portfolio/src/assets/styles/global.css
+++ b/portfolio/src/assets/styles/global.css
@@ -10,4 +10,19 @@ body {
   background-color: #f3f3f3;
   font-family: 'inter', sans-serif;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+  padding-top: 80px;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7c7c7c;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #666;
 }
